# bibfixer

./: .gitignore  MANIFEST.in  README.md  bibfixer.py  bibliography.py  pyproject.toml  pytest.ini  test.bib
.github/workflows/: ci.yml
bibfixer/: __init__.py  checks.py  cli.py  core.py  curate.py  fixes.py  helpers.py  utils.py  validation.py
bibliography/: __init__.py  cli.py  core.py  curate.py  fixes.py  helpers.py  utils.py  validation.py
tests/: conftest.py  test_bibfile_io.py  test_bibfmt_integration.py  test_cli.py  test_cli_helpers.py  test_core.py  test_curate_features.py  test_helpers.py  test_utils.py  test_validation.py
