[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibfixer"
version = "0.1.1"
description = "Utility library and CLI for managing LaTeX bibliography files."
authors = [
    {name = "Your Name", email = "you@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bibtexparser>=1.3",
    # bibfmt is a mandatory formatting helper; install via GitHub as it isn't
    # on PyPI yet.
    "bibfmt @ git+https://github.com/rlaplaza-lab/bibfmt.git",
]

[project.optional-dependencies]
# optional features that require third-party tools not on PyPI or only needed
# for extended curation workflows
betterbib = ["betterbib>=0.11"]
pybtex = ["pybtex>=0.24"]

# development/test tools
test = ["pytest", "ruff", "mypy"]

[project.scripts]
bibfixer = "bibfixer.cli:main"
