[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibfixer"
version = "0.1.2"
description = "Utility library and CLI for managing LaTeX bibliography files."
authors = [
    {name = "Your Name", email = "you@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bibtexparser>=1.3",
    # bibfmt is a mandatory formatting helper; install via GitHub as it isn't
    # on PyPI yet.
    "bibfmt @ git+https://github.com/rlaplaza-lab/bibfmt.git",
]

[project.optional-dependencies]
# optional features that require third-party tools not on PyPI or only needed
# for extended curation workflows
betterbib = ["betterbib>=0.11"]
pybtex = ["pybtex>=0.24"]

# development/test tools
test = ["pytest", "ruff", "mypy"]

[project.scripts]
bibfixer = "bibfixer.cli:main"

[tool.setuptools]
# include our CSV mapping files in the installed package
include-package-data = true

[tool.setuptools.packages.find]
# search from the project root so the editable install adds the root
# directory to sys.path.  previously we limited discovery to
# "bibfixer", which caused pip to write a path ending in
# ``.../bibfixer/bibfixer``.  when running the CLI outside the
# checkout this meant ``import bibfixer`` failed because Python looked
# for a package inside that directory and found nothing.  using an empty
# where ensures the top-level package directory is on sys.path.
where = [""]

[tool.setuptools.package-data]
"bibfixer" = ["data/*.csv"]
